# Optic-Calculator

./: README.md  constants.py  eyewear.py  eyewear_constructor.py  eyewear_old.py  main.py  pyproject.toml  runtest.py  temp_notes.txt
